--- a/demo.html
+++ b/demo.html
@@ -5,5 +5,6 @@
 		<h1>Hello</h1>
 		<h2>My Name Song Chengchheav</h2>
 		<h2>My Name Song Chengchheav</h2>
+		<input type="button" value="Test" onclick="javascript:alert(1);"/>
 	</body>
 </html>
