--- a/demo.html
+++ b/demo.html
@@ -6,5 +6,6 @@
 		<h2>My Name Song Chengchheav</h2>
 		<h2>My Name Song Chengchheav</h2>
 		<input type="button" value="Test" onclick="javascript:alert(1);"/>
+		<input type="button" value="Test" onclick="javascript:alert(1);"/>
 	</body>
 </html>
